Add method GetCalendarEvents
