# api/docs/swagger.json
@@ -8,6 +8,40 @@
     },
     "basePath": "/api/v1",
     "paths": {
+        "/api/v1/calendar": {
+            "get": {
+                "description": "Get Calendar Events",
+                "tags": [
+                    "Calendar"
+                ],
+                "summary": "Get Calendar Events",
+                "parameters": [
+                    {
+                        "description": "query params",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.GetCalendarEventsRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.GetCalendarEventsResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/httperror.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/export/reports": {
             "get": {
                 "description": "Export reports to csv",
@@ -509,6 +543,20 @@
                 }
             }
         },
+        "domain.CalendarEvent": {
+            "type": "object",
+            "properties": {
+                "date": {
+                    "type": "string"
+                },
+                "event_type": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                }
+            }
+        },
         "domain.CreateReportRequest": {
             "type": "object",
             "properties": {
@@ -540,6 +588,37 @@
             "properties": {
                 "id": {
                     "type": "string"
+                }
+            }
+        },
+        "domain.GetCalendarEventsRequest": {
+            "type": "object",
+            "properties": {
+                "date_from": {
+                    "type": "string"
+                },
+                "date_to": {
+                    "type": "string"
+                },
+                "page": {
+                    "type": "integer"
+                },
+                "page_size": {
+                    "type": "integer"
+                }
+            }
+        },
+        "domain.GetCalendarEventsResponse": {
+            "type": "object",
+            "properties": {
+                "count": {
+                    "type": "integer"
+                },
+                "events": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/domain.CalendarEvent"
+                    }
                 }
             }
         },
